Merge branch 'master' of /Users/andreea/Desktop/19-20/AA/BT/02_Backtracking_Euler with conflicts.